style.css
* {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}

body, textarea {
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 14px;
    line-height: 18px;
}

a {
    color: black;
}

p {
    margin: 0;
    padding: 0;
}

.clear-both {
    clear: both;
}

#sidebar {
    position: fixed;
    left: 0px;
    width: 200px;
    padding: 6px;
}

#timeline {
    margin-left: 200px;
}

.timeline {
    top: 0px;
}

.tweet {
    position: relative;
    border-bottom: 1px solid #ccc;
    padding: 6px;
}

.tweet:hover {
    background-color: #f5f8fa;
}

.tweet .profile {
    position: absolute;
    left: 0px;
    width: 60px;
    padding: 6px;
}

.tweet .body {
    margin-left: 60px;
    padding: 6px;
}

.tweet .header {
    padding-bottom: 6px;
}

.tweet .profile-image {
    border-radius: 5px;
    width: 48px;
    height: 48px;
}

.tweet .name, .user-item .name {
    font-weight: bold;
}
.tweet .username, .tweet .timestamp, .user-item .username {
    color: gray;
}

.tweet p.tweet-text {
    word-break: break-word;
}

.tweet .emoji {
    vertical-align: middle;
    width: 20px;
    height: 20px;
}

.tweet .media-set {
    margin: 12px 0;
    max-width: 500px;
}

.tweet .media {
    height: auto;
    border-radius: 5px;
    padding: 0 1px;
}

.tweet .media-1 {
    max-width: 100%;
}

.tweet .media-2 {
    max-width: 50%;
}

.tweet .media-3 {
    max-width: 33%;
}

.tweet .media-4 {
    max-width: 25%;
}

.tweet .quoted-tweet {
    cursor: pointer;
    margin: 6px 0;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 5px;
}

.tweet .quoted-tweet:hover {
    border: 1px solid #1DA1F2;
}

.tweet .footer {
    padding-top: 6px;
}

.tweet .footer a.action {
    margin-right: 80px;
    text-decoration: none;
}

.action-icon {
    width: 24px;
    height: 24px;
    fill: #AAB8C2;
}

.tweet .footer .count {
    margin-left: 6px;
}

.tweet .footer * {
    color: #AAB8C2;
    vertical-align: middle;
}

.tweet .footer .reply-action:hover .action-icon {
    fill: #1DA1F2;
}

.tweet .footer .retweet-action:hover .count {
    color: #19CF86;
}

.tweet .footer .retweet-action:hover .action-icon {
    fill: #19CF86;
}

.tweet .footer .retweet-action.retweeted .action-icon {
    fill: #19CF86;
}

.tweet.event .retweeted-action {
    fill: #19CF86;
}

.tweet .footer .like-action:hover .count {
    color: #E81C4F;
}

.tweet .footer .like-action:hover .action-icon {
    fill: #E81C4F;
}

.tweet .footer .like-action.liked .action-icon {
    fill: #E81C4F;
}

.tweet.event .like-action {
    fill: #E81C4F;
}

.tweet.event .profile p {
    text-align: right;
}

.tweet.event p.tweet-text {
    color: #AAB8C2;
}


.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0,0,0,0.4);
}

.modal-content {
    background: #FFF;
    margin: 15% auto;
    width: 80%;
    max-width: 600px;
    padding: 12px;
    border-radius: 5px;
}

#tweet-dialog #tweet-dialog-actions {
    width: 100%;
    text-align: center;
}

#tweet-dialog #tweet-dialog-remaining-length {
    float: left;
    width: 4em;
    color: #AAB8C2;
    text-align: left;
    margin-top: 6px;
}

#tweet-dialog #tweet-dialog-post {
    float: right;
    padding: 6px;
    margin-top: 6px;
}

#tweet-dialog textarea {
    width: 100%;
    height: 6em;
}

#error {
    display: none;
    position: fixed;
    z-index: 2;
    left: 0;
    right: 0;
    width: 80%;
    top: 0;
    margin: 24px auto;
    background-color: #efcece;
    overflow: auto;
    max-height: 12em;
    padding: 12px;
    border-radius: 5px;
}

.user-item img {
    width: 48px;
    border-radius: 5px;
}
.user-item * {
    vertical-align: middle;
}

